kyy-k8s-dev/app/backend/short-url/short-url-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: short-url
  name: short-url
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: short-url
    spec:
      imagePullSecrets:
        - name: qingdao
      containers:
        - args:
            - --registry_address=consul-server-bootstrap:8500
          name: short-url
          image: registry.cn-qingdao.aliyuncs.com/kaoyaya/short-url-web-gin:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
