kyy-k8s-dev/app/backend/short-url/short-url-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: short-url
  name: short-url
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: short-url
